# Binance-TA

./: CMakeLists.txt  README.md  client.cpp  server.cpp
cmake/: FindCURL.cmake  FindWebsocket.cmake
lib/jsoncpp-1.8.3/: CMakeLists.txt
protos/: ticker.proto
src/binance/: CMakeLists.txt  binacpp.cpp  binacpp.h  binacpp_websocket.cpp  binacpp_websocket.h
src/core/binance/: BinanceDataProvider.h  binance_api_path_gen.h  web_stream_data.h
src/core/market/: BucketSet.h  DeltaBook.h  Level.h  OrderBook.h  Price.h  SimpleOrderBook.h  enums.h
src/core/services/: ServiceInterface.h  TickerService.h
src/core/techical_indicators/: Ema.h  RSI.h  utils.h
src/core/utility/: json_utility.h
src/services/: BinanceObjects.h  ServiceInterface.h  TickerService.h
src/services/techical_indicators/: Ema.h
